--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.5.0",
     "file-saver": "^2.0.5",
     "gh-pages": "^6.3.0",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
